--- a/ops/kubernetes/argocd/apps/deployment.yaml
+++ b/ops/kubernetes/argocd/apps/deployment.yaml
@@ -38,3 +38,26 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: localapi-ingress
+  namespace: default
+spec:
+  ingressClassName: traefik
+  tls:
+    - hosts:
+        - api.local
+      secretName: localapi-secret
+  rules:
+    - host: api.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: myjob
+                port:
+                  number: 8080
