--- a/ops/kubernetes/argocd/apps/deployment.yaml
+++ b/ops/kubernetes/argocd/apps/deployment.yaml
@@ -46,12 +46,8 @@ metadata:
   namespace: default
 spec:
   ingressClassName: traefik
-  tls:
-    - hosts:
-        - api.local
-      secretName: localapi-secret
   rules:
-    - host: api.local
+    - host: sub.admondtamang.com.np
       http:
         paths:
           - path: /
