--- a/templates/server-deployments/place-it-in-home-dir/dev_app/dev_api/docker-compose.yaml
+++ b/templates/server-deployments/place-it-in-home-dir/dev_app/dev_api/docker-compose.yaml
@@ -5,7 +5,7 @@ networks:
 
 services:
   dev_api:
-    image: "axp-backend:dev"
+    image: "backend:dev"
     restart: always
     env_file:
       - ./.env
