--- a/templates/server-deployments/place-it-in-home-dir/dev_app/dev_frontend/docker-compose.yaml
+++ b/templates/server-deployments/place-it-in-home-dir/dev_app/dev_frontend/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - app
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.web.loadbalancer.server.port=3000"
-      - "traefik.http.routers.web.entrypoints=websecure"
-      - "traefik.http.routers.web.tls.certresolver=production"
-      - "traefik.http.routers.web.rule=Host(`dev.admondtamang.com.np`)"
+      - "traefik.http.services.app-web.loadbalancer.server.port=3000"
+      - "traefik.http.routers.app-web.entrypoints=websecure"
+      - "traefik.http.routers.app-web.tls.certresolver=production"
+      - "traefik.http.routers.app-web.rule=Host(`dev.admondtamang.com.np`)"
