--- a/templates/server-deployments/place-it-in-home-dir/dev_app/dev_api/docker-compose.yaml
+++ b/templates/server-deployments/place-it-in-home-dir/dev_app/dev_api/docker-compose.yaml
@@ -13,8 +13,8 @@ services:
       - app
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.dev-api.loadbalancer.server.port=8080"
-      - "traefik.http.services.dev-api.loadbalancer.server.scheme=http"
-      - "traefik.http.routers.dev-api.entrypoints=websecure"
-      - "traefik.http.routers.dev-api.tls.certresolver=production"
-      - "traefik.http.routers.dev-api.rule=Host(`dev-api.admondtamang.com.np`)"
+      - "traefik.http.services.dev_api.loadbalancer.server.port=8080"
+      - "traefik.http.services.dev_api.loadbalancer.server.scheme=http"
+      - "traefik.http.routers.dev_api.entrypoints=websecure"
+      - "traefik.http.routers.dev_api.tls.certresolver=production"
+      - "traefik.http.routers.dev_api.rule=Host(`dev_api.admondtamang.com.np`)"
